--- a/src/scss/aside.scss
+++ b/src/scss/aside.scss
@@ -1,23 +1,16 @@
 .sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  display: flex;
+  position: relative;
   z-index: 1;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 20px 0 10px;
   // min-height: 350px;
-  height: 100vh;
   background-color: #e2ff00;
   width: 65px;
 
   @media screen and (max-width: 768px) {
     width: 50px;
-  }
-
-  @media screen and (max-width: 425px) {
-    padding-bottom: 70px;
   }
 
   &__top {
@@ -55,6 +48,11 @@
   &__switcher-mode {
     position: relative;
     cursor: pointer;
+    &-image {
+      &:hover {
+        filter: drop-shadow(0px 0px 3px #000000);
+      }
+    }
   }
 
   &__line {
@@ -81,6 +79,21 @@
 
   &__socials {
     flex-direction: column;
+    align-items: center;
+    & .asidesocials__link_facebook,
+    & .asidesocials__link_linkedin,
+    & .asidesocials__link_youtube,
+    & .asidesocials__link_tiktok {
+      margin-top: 36px;
+      width: 20px;
+      height: 20px;
+      filter: brightness(0) saturate(100%) invert(4%) sepia(5%) saturate(2224%) hue-rotate(149deg)
+        brightness(99%) contrast(95%);
+      &:hover {
+        filter: drop-shadow(0px 0px 3px #ffffff) brightness(0) saturate(100%) invert(4%) sepia(5%)
+          saturate(2224%) hue-rotate(149deg) brightness(99%) contrast(95%);
+      }
+    }
   }
 
   &_night-mode {
@@ -101,9 +114,17 @@
       }
 
       &__socials {
-        & .socials__link {
+        & .asidesocials__link_facebook,
+        & .asidesocials__link_linkedin,
+        & .asidesocials__link_youtube,
+        & .asidesocials__link_tiktok {
           filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7427%)
             hue-rotate(23deg) brightness(118%) contrast(118%);
+
+          &:hover {
+            filter: drop-shadow(0px 0px 3px #ffffff) brightness(0) saturate(100%) invert(100%)
+              sepia(0%) saturate(7427%) hue-rotate(23deg) brightness(118%) contrast(118%);
+          }
         }
       }
 
@@ -112,10 +133,16 @@
         border-top: 1px solid #ffffff;
       }
 
-      &__swicther-mode-image {
+      &__switcher-mode-image {
         opacity: 0.5;
         filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7427%)
           hue-rotate(23deg) brightness(118%) contrast(118%);
+
+        &:hover {
+          opacity: 1;
+          filter: drop-shadow(0px 0px 3px #ffffff) brightness(0) saturate(100%) invert(100%)
+            sepia(0%) saturate(7427%) hue-rotate(23deg) brightness(118%) contrast(118%);
+        }
       }
     }
   }
