--- a/src/scss/headline.scss
+++ b/src/scss/headline.scss
@@ -5,11 +5,7 @@
   width: 100%;
   height: 100%;
   color: #cbe500;
-  overflow-x: hidden;
-  // overflow-y: hidden;
-  @media screen and (max-width: 425px) {
-    overflow-y: scroll;
-  }
+  overflow: hidden;
 
   &__description {
     display: flex;
@@ -19,19 +15,11 @@
   }
 
   &__wrapper {
-    height: 100vh;
     width: calc(100vw - 65px);
 
     @media screen and (max-width: 768px) {
       width: calc(100vw - 50px);
-    }
-  }
-
-  &__left-skeleton {
-    flex-shrink: 0;
-    width: 65px;
-    @media screen and (max-width: 768px) {
-      width: 50px;
+      overflow-y: scroll;
     }
   }
 
@@ -46,7 +34,7 @@
     color: #ffffff;
     text-align: center;
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 426px) {
       font-size: 23px;
     }
   }
@@ -64,7 +52,7 @@
     opacity: 0.1;
 
     @media screen and (max-width: 768px) {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 73px;
       font-size: 96px;
@@ -76,30 +64,46 @@
     & .socials__link_facebook,
     & .socials__link_linkedin,
     & .socials__link_youtube,
-    & .socials__link_telegram {
-      filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7427%) hue-rotate(23deg)
-        brightness(118%) contrast(118%);
-
-      &:hover {
-        filter: brightness(0) saturate(100%) invert(84%) sepia(100%) saturate(1443%)
-          hue-rotate(11deg) brightness(106%) contrast(103%);
-      }
+    & .socials__link_tiktok {
+      filter: drop-shadow(0px 0px 10px #fff);
     }
-  }
 
-  &__content {
-    min-height: 100vh;
+    & .socials__link_tiktok {
+      width: 20px;
+      height: 20px;
+    }
   }
 
   &__description {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: calc(100vh - 100px);
-    // min-height: 900px;
+
+    @media screen and (max-width: 425px) {
+      margin-top: 30px;
+      justify-content: flex-start;
+    }
+
+    @media screen and (min-height: 500px) {
+      justify-content: center;
+    }
+  }
+
+  &__content {
+    position: relative;
+
+    height: 100vh;
+    z-index: 1;
   }
 
   &_night-mode {
+    & .socials__link_facebook,
+    & .socials__link_linkedin,
+    & .socials__link_youtube,
+    & .socials__link_tiktok {
+      filter: drop-shadow(0 0 10px #ffffff) brightness(0) saturate(100%) invert(100%) sepia(7%)
+        saturate(28%) hue-rotate(249deg) brightness(107%) contrast(109%);
+    }
+
     & .overlay {
       background: #818c92;
     }
@@ -109,7 +113,7 @@
     }
 
     & .gradient-1 {
-      display: block;
+      display: none;
       position: absolute;
       width: 374.69px;
       height: 374.69px;
@@ -120,6 +124,10 @@
       mix-blend-mode: color-dodge;
       transform: rotate(28.82deg);
       filter: none;
+
+      @media screen and (max-width: 425px) {
+        display: block;
+      }
     }
 
     & .gradient-2 {
@@ -135,13 +143,181 @@
       filter: none;
 
       @media screen and (max-width: 425px) {
-        top: 67%;
+        top: 71%;
         left: 57%;
       }
 
       @media screen and (min-width: 426px) and (max-width: 768px) {
         left: 75%;
       }
+
+      @media screen and (min-width: 1440px) {
+        left: 91.5%;
+      }
+    }
+
+    & .gradient-3 {
+      display: none;
+    }
+  }
+}
+
+.logo {
+  &__wrapper {
+    position: absolute;
+    margin: 25px 17px;
+    width: 100px;
+
+    @media screen and (max-width: 768px) {
+      margin: 25px 8px;
+    }
+  }
+  &__text {
+    position: absolute;
+    top: 25px;
+    width: 100%;
+    font-size: 9.5px;
+    font-family: 'Montserrat';
+    color: #fff;
+
+    @media screen and (max-width: 768px) {
+      display: none;
+
+      &.active {
+        display: block;
+      }
+    }
+  }
+}
+
+.headline {
+  padding-top: 44px;
+  margin-bottom: 135px;
+  color: #fff;
+
+  @media screen and (min-width: 769px) {
+    padding-top: 0;
+  }
+
+  &__wrapper {
+    padding: 0 16px;
+  }
+
+  &__image {
+    margin: 0;
+    margin-bottom: 20px;
+    width: 100%;
+    // height: 360px;
+  }
+
+  &__heading {
+    margin: 0;
+    margin-bottom: 10px;
+    font-family: 'Play';
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 120%;
+  }
+
+  &__description {
+    margin: 0;
+    margin-bottom: 30px;
+    font-family: 'Montserrat';
+    line-height: 160%;
+    color: #ffffff;
+    opacity: 0.8;
+  }
+
+  &__highlight {
+    color: #e2ff00;
+  }
+
+  &__button-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 288px;
+    filter: drop-shadow(0px 5px 30px rgba(226, 255, 0, 0.3));
+
+    @media screen and (min-width: 769px) {
+      display: none;
+    }
+  }
+
+  &__button {
+    position: relative;
+    width: 288px;
+    height: 57px;
+    padding: 15px 68px;
+    background: #e2ff00;
+    clip-path: polygon(10% 0, 100% 1%, 100% 69%, 91% 100%, 0 100%, 0 35%);
+    font-family: 'Montserrat';
+    font-weight: 700;
+    line-height: 160%;
+    color: #0d1011;
+    border: none;
+    outline: none;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      padding: 15px 38px;
+    }
+  }
+
+  &__button-overlay {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    z-index: -2;
+    width: 100%;
+    height: 57px;
+    background: #e2ff00;
+    clip-path: polygon(10% 0, 100% 1%, 100% 69%, 91% 100%, 0 100%, 0 35%);
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 1px;
+      bottom: 1px;
+      top: 1px;
+      left: 1px;
+      z-index: 100;
+      background: #3c440e;
+      clip-path: polygon(10% 0, 100% 1%, 100% 69%, 91% 100%, 0 100%, 0 35%);
+    }
+  }
+}
+
+.headline_night-mode,
+.order_night-mode {
+  & .headline {
+    &__heading {
+      font-family: 'Furore';
+      font-size: 32px;
+      line-height: 140%;
+      background: radial-gradient(134.31% 685% at 42.65% 21%, #ffffff 0%, #101314 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+    }
+
+    &__button-wrapper {
+      filter: none;
+    }
+
+    &__button {
+      padding: 15px 20px;
+      width: 202px;
+      background: #687377;
+      background-image: url(./assets/img/buttonBackground.png);
+      background-repeat: no-repeat;
+      background-position: -4px 0px;
+      clip-path: polygon(3% 0, 97% 0, 100% 9%, 100% 93%, 97% 100%, 3% 100%, 0 90%, 0 9%);
+      color: white;
+    }
+
+    &__button-overlay {
+      display: none;
     }
   }
 }
