--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -85,13 +85,12 @@ body {
   display: flex;
   padding: 0 165px 0 60px;
   width: 100%;
-  background-color: #0d1011;
 
   @media screen and(min-width: 769px) {
     max-width: 800px;
     flex-direction: column;
     overflow-y: scroll;
-    // overflow-x: hidden;
+    overflow-x: hidden;
   }
 }
 
