--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -4,6 +4,10 @@
 
   &__wrapper {
     padding: 0 16px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__video-wrapper {
@@ -30,6 +34,16 @@
     // border-image-slice: 1;
     // border-width: 1px;
     // border-image-source: linear-gradient(to right bottom, #e2ff00, transparent);
+  }
+
+  &__img {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    width: calc(100% - 2px);
+    clip-path: polygon(7% 0, 100% 0, 100% 94%, 93% 100%, 0 100%, 0 6%);
   }
 
   &_night-mode {
