--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -85,12 +85,13 @@ body {
   display: flex;
   padding: 0 165px 0 60px;
   width: 100%;
+  overflow: hidden;
 
   @media screen and(min-width: 769px) {
     max-width: 800px;
     flex-direction: column;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    // overflow-y: scroll;
+    // overflow-x: hidden;
   }
 }
 
