--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -13,7 +13,7 @@
   &__video-wrapper {
     position: relative;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     background: linear-gradient(to right bottom, #e2ff00, transparent);
     clip-path: polygon(7% 0, 100% 0, 100% 94%, 93% 100%, 0 100%, 0 6%);
   }
@@ -21,7 +21,7 @@
   &__video {
     display: block;
     width: calc(100% - 2px);
-    height: 100%;
+    // height: 100%;
     clip-path: polygon(7% 0, 100% 0, 100% 94%, 93% 100%, 0 100%, 0 6%);
     border: none;
     position: absolute;
@@ -50,33 +50,26 @@
     & .order {
       &__video-wrapper {
         z-index: 100;
-        clip-path: polygon(7% 0, 93% 0, 100% 7%, 100% 93%, 94% 100%, 6% 100%, 0 94%, 0 7%);
-        background: transparent;
-      }
-
-      &__overlay {
-        display: block;
-        position: absolute;
-        z-index: 100;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background-color: transparent;
-        background-image: url(./assets/img/border.svg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        clip-path: polygon(7% 0, 93% 0, 100% 7%, 100% 93%, 94% 100%, 6% 100%, 0 94%, 0 7%);
+        clip-path: polygon(7% 0, 93% 0, 100% 7%, 100% 93%, 93% 100%, 7% 100%, 0 93%, 0 7%);
+        background: linear-gradient(to right bottom, #fff, transparent);
       }
 
       &__video {
         z-index: 99;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
+        top: 1px;
+        right: 1px;
+        left: 1px;
+        bottom: 1px;
         width: 100%;
-        clip-path: polygon(7.5% 0, 93% 0, 100% 8%, 100% 80%, 98% 100%, 7% 100%, 0 93%, 0 7.5%);
+        clip-path: polygon(7% 0, 93% 0, 100% 7%, 100% 93%, 93% 100%, 7% 100%, 0 93%, 0 7%);
+      }
+
+      &__img {
+        top: 1px;
+        right: 1px;
+        left: 1px;
+        bottom: 1px;
+        clip-path: polygon(7% 0, 93% 0, 100% 7%, 100% 93%, 93% 100%, 7% 100%, 0 93%, 0 7%);
       }
     }
   }
