--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -85,13 +85,11 @@ body {
   display: flex;
   padding: 0 165px 0 60px;
   width: 100%;
-  overflow: hidden;
 
   @media screen and(min-width: 769px) {
     max-width: 800px;
     flex-direction: column;
-    // overflow-y: scroll;
-    // overflow-x: hidden;
+    overflow: hidden;
   }
 }
 
@@ -234,7 +232,31 @@ h1 {
   line-height: 160%;
   color: #ffffff;
 
+  &_about {
+    position: absolute;
+    top: 16px;
+    left: 8px;
+  }
+
   @media screen and (min-width: 769px) {
     display: none;
+  }
+}
+
+#initial-screen {
+  position: relative;
+}
+
+.uk {
+  display: none !important;
+  &.visible {
+    display: block !important;
+  }
+}
+
+.en {
+  display: none !important;
+  &.visible {
+    display: block !important;
   }
 }
