--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -85,11 +85,13 @@ body {
   display: flex;
   padding: 0 165px 0 60px;
   width: 100%;
+  overflow: hidden;
 
   @media screen and(min-width: 769px) {
     max-width: 800px;
     flex-direction: column;
-    overflow: hidden;
+    // overflow-y: scroll;
+    // overflow-x: hidden;
   }
 }
 
@@ -232,31 +234,7 @@ h1 {
   line-height: 160%;
   color: #ffffff;
 
-  &_about {
-    position: absolute;
-    top: 16px;
-    left: 8px;
-  }
-
   @media screen and (min-width: 769px) {
     display: none;
-  }
-}
-
-#initial-screen {
-  position: relative;
-}
-
-.uk {
-  display: none !important;
-  &.visible {
-    display: block !important;
-  }
-}
-
-.en {
-  display: none !important;
-  &.visible {
-    display: block !important;
   }
 }
